Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Documentation]
  - Emphasised that value order does not matter in the SYNOPSIS.

  - Adjusted the wording related to the new predicate prefix option.

  - Clarified that predicates return 0 for false, not an empty string.

  [Other]
  - Added a benchmark script for development.

v0.3.0    2024-06-19 17:31:12+01:00 Europe/London
  [Enhancements]
  - Added the "prefix" constructor option and method.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.14.

  [Documentation]
  - Updated copyright year.

  [Tests]
  - Changed the author MANIFEST tests to use a maintained module.

v0.2.7    2023-06-11 14:25:38+01:00 Europe/London
  [Documentation]
  - Document support policy for older Perl versions.

  - Bump copyright year.

v0.2.6    2022-09-22 16:42:59+01:00 Europe/London
 [Enhancements]
  - Add MATCH method to support use with match::simple.

  - Minor code improvements.

v0.2.5    2022-09-21 16:19:29+01:00 Europe/London
 [Enhancements]
  - Minor code improvements.

  - Use () prototype for predicate methods.

v0.2.4    2022-09-20 18:27:04+01:00 Europe/London
 [Documentation]
 - Added CAVEAT about performance.

 - Removed "fast" from the ABSTRACT, since it's not necessarily fast.

v0.2.3    2022-09-04 16:07:55+01:00 Europe/London
 [Documentation]
 - Bumped copyright year.

 - Fixed encoding on links in README.

 [Other]
 - Update MANIFEST.SKIP, removing bad rule.

 - Sign release.

v0.2.2    2021-05-21 17:03:37+01:00 Europe/London
 [Bug Fixes]
 - Constructor now fails if there are no values.

 [Tests]
 - Changed tests to use Test::Most with Test::Exception.

 - Added more tests.

v0.2.1    2021-04-30 11:26:32+01:00 Europe/London
 [Enhancements]
 - Add `predicates` method.

 [Documentation]
 - Fixed typo.

v0.2.0    2021-04-29 11:20:06+01:00 Europe/London
 [Enhancements]
 - Add `values` method.

 - Moved overloaded methods to parent classes (removes slight